# TasksManager

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  env_example  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 18437d7f4700_.py  1f635ac320e7_add_cascade_delete_on_team_id_in_task.py  45e1a35475af_.py  6460df4bcb07_add_on_delete_cascade_to_task_id_in_.py  946bc3457934_.py  a77b154a39f3_modify_invite_code_expires_at_column.py  b5fbeef75200_.py  df95027631ac_dded_an_associative_table_for_evaluation.py
backend/: alembic.ini  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/api/: teams_api.py  users.py  users_api.py
backend/auth/: auth.py  security.py
backend/config/: db.py  settings.py
backend/crud/: basecrud.py  task.py  team.py  team_user.py  teams_crud.py  user.py  users.py  users_crud.py
backend/models/: __init__.py  association.py  associations.py  comments.py  enum.py  enums.py  evaluations.py  meeting.py  meetings.py  task.py  tasks.py  team.py  user.py  users.py
backend/routers/: auth.py  task.py  team.py  user.py
backend/schemas/: TeamUserAssociation_schemas.py  task.py  team.py  team_user.py  teams_schemas.py  user.py  users.py  users_schemas.py
backend/src/: main.py
backend/tests/: conftest.py
frontend/: tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: mockData.ts
src/: constants.py  main.py  mockData.ts
src/admin/: __init__.py  auth.py  csu.py  views.py
src/config/: db.py  settings.py
tests/: conftest.py
(+221 files in other folders)
